<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/india"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark_transparent">


        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/india"-->
        <!--android:scaleType="centerCrop"/>-->

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/a"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/ball"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_a_balls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/overs"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_a_overs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/wicket"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_a_wicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addSixForTeamA"
                    android:text="@string/six"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addFourForTeamA"
                    android:text="@string/four"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/three"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/two"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addOneForTeamA"
                    android:text="@string/one"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="outForTeamA"
                    android:text="@string/out"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/b"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/ball"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_b_balls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/overs"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_b_overs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/wicket"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_b_wicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/team_b_runs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#ffff"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addSixForTeamB"
                    android:text="@string/six"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addFourForTeamB"
                    android:text="@string/four"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/three"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/two"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="addOneForTeamB"
                    android:text="@string/one"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:onClick="outForTeamB"
                    android:text="@string/out"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linear"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="100dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textColor="#fff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:onClick="displayForTeamBA"/>

    </RelativeLayout>


</ScrollView>